--- a/index.html
+++ b/index.html
@@ -311,6 +311,13 @@ $(document).ready(function () {
 </ul>
 <p>This small bit of preparation will allow us to move quickly through the basics and get to the good stuff.</p>
 </div>
+<div id="course-reference" class="section level3">
+<h3>Course reference</h3>
+<p>Main text:</p>
+<p>Advanced R by Hadley Wickham <a href="http://adv-r.had.co.nz/" class="uri">http://adv-r.had.co.nz/</a></p>
+<p>Secondary reading:</p>
+<p>R for Data Science by Garret Grolemund and Hadley Wickham <a href="http://r4ds.had.co.nz/" class="uri">http://r4ds.had.co.nz/</a> (in progress)</p>
+</div>
 <div id="day-0-introduction" class="section level3">
 <h3><a href="day0.html">Day 0: Introduction</a></h3>
 <p><strong>Thursday, September 8, 9:00 - 10:00 am</strong></p>
